<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_descripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:maxLines="1"
        android:text="@string/descripcion"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_cabecera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/v_separador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_descripcion">

        <ImageButton
            android:id="@+id/ib_menos"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/contentDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_remove" />

        <ImageButton
            android:id="@+id/ib_mas"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/contentDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_add" />

        <TextView
            android:id="@+id/tv_cantidad"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:text="@string/_1"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ib_mas"
            app:layout_constraintStart_toEndOf="@+id/ib_menos"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_importe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/importe"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/v_separador"
        app:layout_constraintEnd_toStartOf="@+id/ib_eliminar"
        app:layout_constraintTop_toBottomOf="@+id/tv_descripcion" />

    <ImageButton
        android:id="@+id/ib_eliminar"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="48sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_remove_circle"
        android:contentDescription="@string/contentDescription"
        app:layout_constraintBottom_toTopOf="@+id/v_separador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_descripcion" />

    <View
        android:id="@+id/v_separador"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/grisOscuroColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>